# deep-agents

./: .gitignore  README.md  create_agent.py  example.env  file_agent.py  main.py  mcp_server.py  pyproject.toml  todo_agent.py
data/evals/: sample_dataset.json
src/: create_agent.py  file_agent.py  full_agent.py  state.py  subagent_agent.py  todo_agent.py
src/evals/: __init__.py  data_setup.py  test_agent.py  test_single_example.py
src/mcp/server/: mcp_server.py
